--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
             dockerfile: docker/laravel/Dockerfile
         # We will start from this directory when we enter this container
         working_dir: /laravel
+        environment:
+            - TZ=${TZ}
         volumes:
             # Where the source code should be saved.
             - <<: *laravel-volume
