--- a/docker/laravel/Dockerfile
+++ b/docker/laravel/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.0-fpm-alpine
+FROM php:8.2-fpm-alpine
 LABEL maintainer "le chat the cat"
 
 ENV COMPOSER_ALLOW_SUPERUSER 1
@@ -9,7 +9,7 @@ RUN set -eux && \
   # the dependencies "build-php-dependencies" that are necessary only when building will be deleted after build 
   apk add --update-cache --no-cache --virtual=.build-php-dependencies tzdata && \
   # other dependencies will not be deleted but saved permanently
-  apk add --update-cache --no-cache nodejs npm && \
+  apk add --update-cache --no-cache nodejs npm git && \
   # change the localtime
   cp /usr/share/zoneinfo/Etc/UTC /etc/localtime && \
   # Delete the build dependencies
